--- a/css/style.css
+++ b/css/style.css
@@ -467,21 +467,23 @@ ul {
 }
 .prodect-info-container {
   width: 96vw;
-  display: grid;
+  display: flex;
+  /* display: grid;
   grid-template-columns: repeat(4, 1fr) 1fr 1fr 1fr repeat(2, 1fr) 0fr 1.5fr;
   grid-template-rows: repeat(12, 1fr);
   grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-row-gap: 0px; */
 }
 
 .prodact-info {
+  height: 165vh;
   justify-content: center;
   display: grid;
   grid-template-columns: 6fr 3fr;
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  grid-area: 1 / 1 / 11 / 10;
+  border-bottom: solid 1px #d6d6d6;
 }
 
 /* Images  */
@@ -591,7 +593,6 @@ ul {
   grid-area: 1 / 2 / 2 / 3;
   margin-right: 26px;
   width: 431px;
-  
 }
 .description-container a {
   color: var(--description-link-color);
@@ -831,7 +832,7 @@ ul {
   display: flex;
   width: 100%;
   justify-content: center;
-
+  margin-bottom: 18px;
   background: transparent;
 }
 .share-link1 {
@@ -884,13 +885,13 @@ ul {
 }
 .purchese-description {
   width: 242px;
-  
+
   padding: 14px 18px;
   font-size: 14px;
   font-family: var(--font-fm-lt);
   font-weight: 700;
   line-height: 1.7rem;
-  border: 1px #D5D9D9 solid;
+  border: 1px #d5d9d9 solid;
   border-radius: 10px;
 }
 .grayesh-color {
@@ -903,7 +904,6 @@ ul {
 
 .descount-price-num-purchese {
   margin-bottom: 17px;
-
 }
 .first-p {
   margin-bottom: 22px;
@@ -988,41 +988,117 @@ ul {
   margin-bottom: 12px;
 }
 
-.add-to-list-btn{
+.add-to-list-btn {
   width: 100%;
   height: 31px;
-  border: 0.5px gray solid ;
-  background: #EEEFF2;
+  border: 0.5px gray solid;
+  background: #eeeff2;
   text-align: left;
-  padding:0px 18px;
+  padding: 0px 18px;
   cursor: pointer;
-
 }
-.new-3-from-container{
+.new-3-from-container {
   height: 48px;
   width: 242px;
-  border: 1px #D5D9D9 solid;
+  border: 1px #d5d9d9 solid;
   border-radius: 10px;
   margin-top: 24px;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 19px ;
+  padding-left: 19px;
   padding-right: 11px;
   font-family: var(--font-fm-lt);
-  font-weight:800;
+  font-weight: 800;
 }
-.new-3-from-container .price{
+.new-3-from-container .price {
   color: #922501;
-  
 }
 .new-3-from-container:hover {
   cursor: pointer;
 }
-.new-3-arrow{
+.new-3-arrow {
   width: 11px;
   height: 15px;
   background: url(../img/McBZv0ZvnbehkIx.png) no-repeat -379px -600px;
 }
 
+.sell-on-amazon {
+  text-align: center;
+  font-family: var(--font-fm-lt);
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+.sell-on-amazon-btn {
+  width: 114.75px;
+  height: 31px;
+  font-weight: 700;
+  font-size: 13px;
+  cursor: pointer;
+  border-radius: 7px;
+  border: solid gray 1px;
+  background: white;
+}
+.sell-on-amazon-btn:hover {
+  background: #F7FAFA;
+}
+
+
+.sponsored{
+ width: 244px;
+ height: 251px;
+ padding: 20px;
+ border: #D5D9D9 0.5px solid;
+ border-radius: 5px;
+ position: relative;
+ z-index: 1;
+}
+.img-container{
+  width: 100%;
+  height: 128px;
+  
+}
+.sponsored-item-img{
+  width: 127px;
+  height: 128px;
+  margin: auto;
+  background: url('https://m.media-amazon.com/images/I/41rvYpkxkuL._AC_SX214_SY126_.jpg') no-repeat center center/cover;
+}
+
+.item-des-and-price{
+  line-height: 1.3rem;
+  margin-top: 20px;
+  font-family: var(--font-fm-lt);
+  font-weight: 700;
+}
+.sponsored-stars-container{
+  display: flex;
+}
+.prime{
+  width: 43px;
+  height: 12px;
+   background: url('https://images-na.ssl-images-amazon.com/images/G/01/da/creatives/prime-2x-20170531.png') no-repeat center center/cover;
+  margin-left: 5px;
+  }
+.sponsored-price-and-prime{
+  display: flex;
+  
+}
+.sponsored-link{
+  width: 244px;
+  height: 251px;
+position: absolute;
+top: 0;
+left: 0;
+z-index: 5;
+}
+.sponsored-footer{
+  display: flex;
+  justify-content: flex-end;
+  
+}
+.sponsored-footer span{
+  margin-right: 15px;
+  font-family: var(--font-fm-lt);
+}
